--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <title>ChamFind - Capture chameleons</title>
+    <link href="https://fonts.googleapis.com/css?family=Tillana:500" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
   </body>
+  <script>
+      feather.replace()
+    </script>
 
 </html>
